# Fork-of-Team-TimSort

./: CMakeLists.txt  captions_val2017.json  main.cpp  main.py  output.json  pumper.cpp  result.json  stemming.py  synonyms.py
include/: BBox.hpp  Polygon.hpp  Vertice.hpp  algos.hpp  cats_reduce.hpp  py_lnk.hpp
src/: cats_reduce.cpp  differ.cpp  poly_extract.cpp  pywrap.cpp
